# PolyMag

./: .gitignore  README.md  pyproject.toml
src/polymag/: charged_triangle.py  cuboid_magnet.py  i_magnet.py  magnet.py  magnet_node.py  magnet_system.py
src/pylyhedralmagnet/: cuboid_magnet.py  i_magnet.py
tests/: test_charged_triangle.py  test_cuboid_magnet.py  test_magnet.py
