[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylyhedralmagnet"
version = "0.0.1"
authors = [
  { name="James O'Connell", email="contact@jameslg.com" },
]
description = "A small magnet package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jlgoconnell/PylyhedralMagnet"
"Bug Tracker" = "https://github.com/jlgoconnell/PylyhedralMagnet/issues"